--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
---extra-index-url https://download.pytorch.org/whl/cpu
 streamlit
-transformers==4.39.3
-sentencepiece==0.1.99
+transformers
+sentencepiece
